WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281141
Fix typos in FlexFormattingUtils
https://bugs.webkit.org/show_bug.cgi?id=281141
Summary
Fix typos in FlexFormattingUtils
alan
Reported
2024-10-09 09:01:57 PDT
ssia
Attachments
[fast-cq]Patch
(3.51 KB, patch)
2024-10-09 09:03 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-10-09 09:03:20 PDT
Created
attachment 472882
[details]
[fast-cq]Patch
EWS
Comment 2
2024-10-09 09:22:10 PDT
Committed
284898@main
(2ae46152a2b1): <
https://commits.webkit.org/284898@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472882
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-10-09 09:23:15 PDT
<
rdar://problem/137599873
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug