Fix typos in FlexFormattingUtils https://bugs.webkit.org/show_bug.cgi?id=281141

Unreviewed.

Address Tim Nguyen's post-landing comments.

* Source/WebCore/layout/formattingContexts/flex/FlexFormattingUtils.cpp:
(WebCore::Layout::FlexFormattingUtils::rowGapValue):
(WebCore::Layout::FlexFormattingUtils::columnGapValue):
* Source/WebCore/layout/formattingContexts/flex/FlexFormattingUtils.h:

Canonical link: https://commits.webkit.org/284898@main